fix(content): stop single sponsor card from stretching full width

--- a/src/_css/style.scss
+++ b/src/_css/style.scss
@@ -416,6 +416,12 @@ a img {
         break-inside: avoid-column;
       }
     }
+
+    &:not(.multi-col) > div {
+      @include media-breakpoint-up(md) {
+        width: 50%;
+      }
+    }
   }
 
   .card-title {
